test: add unit test coverage for ChatService, OnlineSessionService, and TutorRepository